--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
    			<p>Board of Secondary Education,A.P<br>
    				10<sup>th</sup> Class (2016)<br>
    			 	GPA-10&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PERCENTAGE-95%
-   			 	<a href="E:\Certificates\Raane\Raane SSC_certificate.jpg" target="_blank">SSC Marklist
+   			 	<a href="Raane SSC_certificate.jpg" target="_blank">SSC Marklist
    			 	</a>
    			 </p><br><br>
    			 <p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';"><b>NARAYANA JUNIOR COLLEGE</b>
@@ -80,7 +80,7 @@
    			<p>Board of Intermediate Education,A.P<br>
    				Intermediate (2016-2018)<br>
    			 	MARKS-980/1000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PERCENTAGE-95%
-   			 	<a style="margin-left:180px" href="E:\Certificates\Raane\Raane 12th Grade.jpg" target="_blank">12<sup>th</sup> Marklist
+   			 	<a style="margin-left:180px" href="Raane 12th Grade.jpg" target="_blank">12<sup>th</sup> Marklist
    			 	</a>
    			 </p><br><br>
    			 <p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';"><b>MADANAPALLE INSTITUTE OF TECHNOLOGY AND SCIENCE</b>
@@ -88,7 +88,7 @@
    			<p>UGC-Autonomous<br>
    				B-Tech, Computer Science & Engineering (2018-2022)<br>
    			 	CGPA-9.57&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PERCENTAGE-90.9%
-   			 	<a style="margin-left:220px;" href="E:\Certificates\Raane\Raane SSC_certificate.jpg" target="_blank">SSC Marklist
+   			 	<a style="margin-left:220px;" href="marklist.jpg" target="_blank"> Marklist
    			 	</a>
    			 </p>
    		</div><br><br>
