--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
 			<p>Certifications</p><br>
 			<p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';margin:5px;margin-left:25px;"><b>COURSERA-HTML5</b>
    			</p>
-			<p class="cft">University of Michigan<a href="E:\Coursera\HTML5.pdf" target="_blank">certificate</a></p><br>
+			<p class="cft">University of Michigan<a href="HTML5.pdf" target="_blank">certificate</a></p><br>
 			<p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';margin:5px;margin-left:25px;"><b>COURSERA-Python Data Structures</b>
    			</p>
-			<p class="cft">University of Michigan<a href="E:\Coursera\Python\18699A0529 - M.Raane - Python.pdf" target="_blank">certificate</a></p><br>
+			<p class="cft">University of Michigan<a href="18699A0529 - M.Raane - Python.pdf" target="_blank">certificate</a></p><br>
 			<p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';margin:5px;margin-left:25px;"><b>COURSERA-Python for Data Science and AI</b>
    			</p>
-			<p class="cft">IBM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="E:\Coursera\data and ai.pdf" target="_blank">certificate</a></p>
+			<p class="cft">IBM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="data and ai.pdf" target="_blank">certificate</a></p>
 			<br>
 			<p style="font-size:20px;color:hsl(0, 0%,75%);font-family:'Bellota';margin:5px;margin-left:25px;"><b>COURSERA-Python to Access Web data </b>
    			</p>
-			<p class="cft">University of Michigan<a href="E:\Coursera\Python\18699A0529 - M.Raane - Python4.pdf" target="_blank">certificate</a></p><br>
+			<p class="cft">University of Michigan<a href="18699A0529 - M.Raane - Python4.pdf" target="_blank">certificate</a></p><br>
 			<hr><br>
 			<div class="d1">EXPERIENCE</div>
 			<p>Experience</p>
