--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<li><b>Title: Arts & Crafts (Self Project) </b></li>
 					<li><b>Domain:</b> HTML&CSS</li>
 					<li><b>Abstract:</b>A Simple web page designed using html & css. It is a place where u can find simple and easy things to decorate your place and even u can find some creative activties to enhance your creativity skills.</li>
-					<li><i class='fas fa-hand-point-right' style='font-size:20px;color:hsl(150, 50%, 50%)'></i>&nbsp;<a id="link" href="https://raane9401.github.io/arts-crafts.io/" target="_blank">https://raane9401.github.io/arts-crafts.io/</a>&nbsp;<i class='fas fa-hand-point-left' style='font-size:20px;color:hsl(150, 50%, 50%)'></i></li> 
+					<li><i class='fas fa-hand-point-right' style='font-size:20px;color:hsl(150, 50%, 50%)'></i>&nbsp;<a id="link" href="https://raane9401.github.io/webclb_task1.io/" target="_blank">https://raane9401.github.io/webclb_task1.io/</a>&nbsp;<i class='fas fa-hand-point-left' style='font-size:20px;color:hsl(150, 50%, 50%)'></i></li> 
 				</ul>
 				</li>
 			</ul>
