--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<td class="data">JavaScript</td>
 					<td><span class="dot"></span>
 						<span class="dot"></span>
-						<span class="dot1"></span>
+						<span class="dot"></span>
 						<span class="dot1"></span>
 						<span class="dot1"></span>
 					</td>
