--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	</div>
 	<div class="details">
 		<div class="d1">ABOUT</div>
+		<p class="cft" style="margin-left:300px;text-decoration:underline;"> <a id="link" href="Resume..docx" target="_blank"> Resume</a></p>
 		<p>About me</p><br>
 		<p class="about">My name is <span>Raane</span>. Iam deeply passionate about <span>web development</span>. I design & build user interfaces. I'm interested in learning new technologies & creating new things.</p>
 		<p>My Skills</p>
@@ -155,6 +156,19 @@
 			<div class="d1">EXPERIENCE</div>
 			<p>Experience</p>
 			<ul>
+				<li><h4>WINTER PROGRAM</h4>
+					<ul>
+					<li><b>ASIA UNIVERSITY-TAIWAN(WEB DESIGN)</b></li>
+					<li>Jan 18 2021- Feb 5 2021</li>
+				</ul>
+				</li>
+				<li><h4>MITS WEB CLUB</h4>
+					<ul>
+						<li><b>WEB DEVELOPMENT</b></li>
+					<li>Jan 18 2021- Feb 5 2021</li>
+					<li> Students in MITS WEB CLUB share knowledge about technologies and frameworks, and help each other to develop projects.
+				</ul>
+				</li>
 				<li><h4>Project1 :</h4>
 				<ul>
 					<li><b>Title: SIH-2019 (Patient Case Similarity) </b></li>
