--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
 					<li>Jan 18 2021- Feb 5 2021</li>
 				</ul>
 				</li>
+				<li><h4>INTERNSHIP</h4>
+					<ul>
+					<li><b>DATA SCIENCE USING PYTHON</b></li>
+					<li>May 24 2021- July 14 2021</li>
+				</ul>
+				</li>
 				<li><h4>MITS WEB CLUB</h4>
 					<ul>
 						<li><b>WEB DEVELOPMENT</b></li>
