--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</div>
 	<div class="details">
 		<div class="d1">ABOUT</div>
-		<p class="cft" style="margin-left:300px;text-decoration:underline;"> <a id="link" href="Resume..docx" target="_blank"> Resume</a></p>
+		<p class="cft" style="margin-left:300px;text-decoration:underline;"> <a id="link" href="Resume.docx" target="_blank"> Resume</a></p>
 		<p>About me</p><br>
 		<p class="about">My name is <span>Raane</span>. Iam deeply passionate about <span>web development</span>. I design & build user interfaces. I'm interested in learning new technologies & creating new things.</p>
 		<p>My Skills</p>
